--- a/code/app/src/main/res/layout/entrant_event_details.xml
+++ b/code/app/src/main/res/layout/entrant_event_details.xml
@@ -1,255 +1,240 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    tools:context="EventDashboardActivity"
-    android:id="@+id/main"  >
-
+    android:background="@android:color/white">
 
     <LinearLayout
-        android:layout_width="227dp"
-        android:layout_height="28dp"
-        android:id="@+id/headerLayOut"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        tools:layout_editor_absoluteY="215dp">
-
-        <TextView
-            android:id="@+id/locationHyperlink"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Location"
-            android:textColor="#0228F6"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/locationTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="227dp"
-        android:layout_height="28dp"
-        android:orientation="horizontal"
-        android:id="@+id/organizersLayOut"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@id/headerLayOut"
-        tools:layout_editor_absoluteY="187dp">
-
-        <TextView
-            android:id="@+id/dateTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/timeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-    </LinearLayout>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
+        android:id="@+id/main"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="100dp" />
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/eventNameLayOut"
-        android:layout_width="307dp"
-        android:layout_height="159dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <FrameLayout
+        <!-- Header with Event Name -->
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#15151A">
-
-            <TextView
-                android:id="@+id/eventName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
-                android:layout_weight="1"
-                android:text="Event Name"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+            android:layout_height="120dp"
+            android:background="@color/black"
+            android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/back_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
+                android:layout_marginStart="16dp"
                 app:srcCompat="@drawable/ic_arrow_left_w" />
-        </FrameLayout>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/eventName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="Event Name"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
-    <include
-        android:id="@+id/entrant_tab"
-        layout="@layout/entrant_dashboard"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/organizerNameLayOut"
-        android:layout_width="227dp"
-        android:layout_height="28dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/eventNameLayOut">
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+        <!-- Organizers Row -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Organizers" />
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/organizerName"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Organiser:"
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/organizerName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <!-- Date and Time Row -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-    </LinearLayout>
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/waitlistbuttonsLayOut"
-        android:layout_width="265dp"
-        android:layout_height="65dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Date: "
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
 
-        <Button
-            android:id="@+id/joinWaitlistButton"
-            android:layout_width="132dp"
-            android:layout_height="56dp"
-            android:backgroundTint="#EEE6FB"
-            android:drawableLeft="@drawable/join"
-            android:text="Join Waitlist"
-            android:textColor="@color/light_purple" />
+            <TextView
+                android:id="@+id/dateTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""
+                android:textColor="@android:color/black" />
 
-        <Button
-            android:id="@+id/leaveWaitlistButton"
-            android:layout_width="132dp"
-            android:layout_height="56dp"
-            android:backgroundTint="#EEE6FB"
-            android:drawableLeft="@drawable/leave"
-            android:text="Leave Waitlist"
-            android:textColor="@color/light_purple" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/timeLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Time: "
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
 
-    <LinearLayout
-        android:id="@+id/waitlistLabelLayOut"
-        android:layout_width="264dp"
-        android:layout_height="31dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/waitlistbuttonsLayOut"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline">
+            <TextView
+                android:id="@+id/timeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@android:color/black" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+        <!-- Location Row -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Entrants in Waitlist:" />
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/waitlistCount"
-            android:layout_width="107dp"
+            <TextView
+                android:id="@+id/locationLink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Location"
+                android:textColor="#0228F6"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/locationTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <!-- Event Description -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="0" />
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/guidelinesButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/info" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="From the Organisers:"
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
 
-    <LinearLayout
-        android:id="@+id/eventImageLayOut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/waitlistLabelLayOut"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/eventDescriptionLayOut">
+            <TextView
+                android:id="@+id/eventDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:justificationMode="inter_word"
+                android:text=""
+                android:textColor="@android:color/black" />
+        </LinearLayout>
 
+        <!-- Event Image -->
         <ImageView
             android:id="@+id/eventImage"
-            android:layout_width="120dp"
-            android:layout_height="124dp"
+            android:layout_width="160dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
             android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.408"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/waitlistLabelLayOut"
             app:srcCompat="@drawable/ic_launcher_background" />
 
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/eventDescriptionLayOut"
-        android:layout_width="306dp"
-        android:layout_height="246dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/eventImage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/organizerNameLayOut">
-
-        <TextView
-            android:id="@+id/textView9"
+        <!-- Waitlist Info Row -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="    From the Organizer's:" />
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/eventDescription"
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Entrants in Waitlist:"
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/waitlistCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
+                android:text=""
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
+
+            <ImageView
+                android:id="@+id/guidelinesButton"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="Guidelines"
+                app:srcCompat="@drawable/info" />
+        </LinearLayout>
+
+        <!-- Waitlist Buttons -->
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="226dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:justificationMode="inter_word"
-            android:text="TextView"
-            android:textAlignment="center" />
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/joinWaitlistButton"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_weight="1"
+                android:backgroundTint="#EEE6FB"
+                android:drawableLeft="@drawable/join"
+                android:text="Join Waitlist"
+                android:textColor="@color/light_purple" />
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/leaveWaitlistButton"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_weight="1"
+                android:backgroundTint="#EEE6FB"
+                android:drawableLeft="@drawable/leave"
+                android:text="Leave Waitlist"
+                android:textColor="@color/light_purple" />
+        </LinearLayout>
     </LinearLayout>
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
