--- a/code/app/src/main/res/layout/entrant_tab.xml
+++ b/code/app/src/main/res/layout/entrant_tab.xml
@@ -18,12 +18,13 @@
         app:srcCompat="@drawable/settings_icon" />
 
     <!-- Profile Item -->
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/profile_icon"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_marginBottom="24dp"
         app:cardBackgroundColor="#676767"
+        app:strokeWidth="0dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="0dp">
 
@@ -33,7 +34,7 @@
             android:layout_gravity="center"
             android:src="@drawable/person_icon"
             app:tint="@android:color/white" />
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
     <!-- My Events Item -->
     <LinearLayout
@@ -45,19 +46,20 @@
         android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/events_icon_card"
             android:layout_width="64dp"
             android:layout_height="32dp"
             android:layout_marginBottom="4dp"
-            app:cardBackgroundColor="#BDBDBD"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:strokeWidth="0dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="0dp">
 
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_gravity="center"
-                android:src="@drawable/star_icon"
-                app:tint="@android:color/white" />
+                android:src="@drawable/star_icon" />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -78,11 +80,23 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/search_icon_card"
+            android:layout_width="64dp"
+            android:layout_height="32dp"
             android:layout_marginBottom="4dp"
-            android:src="@drawable/search_icon" />
+            app:cardBackgroundColor="@android:color/transparent"
+            app:strokeWidth="0dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="0dp">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/search_icon" />
+
+        </com.google.android.material.card.MaterialCardView>
 
         <TextView
             android:layout_width="wrap_content"
